# LQVCMapper

./: LQVCMapper.sln  XGC_PC_Mapper.sln
XGC_PC_Mapper/: CMakeLists.txt  XGC_PC_Mapper.vcxproj  XGC_PC_Mapper.vcxproj.filters  cli_client.cpp  controller_manager.cpp  controller_manager.h  keyboard_input.cpp  keyboard_input.h  keynames.h  named_pipe_ipc.cpp  named_pipe_ipc.h  real_controller_monitor.cpp  real_controller_monitor.h  resource.h  service.cpp  tray_icon.h
XGC_PC_Mapper_Client/: XGC_PC_Mapper_Client.vcxproj  XGC_PC_Mapper_Client.vcxproj.filters  resource.h
